Changed save button

--- a/Backend/index.html
+++ b/Backend/index.html
@@ -52,7 +52,7 @@
   <div>
     <label for="port">Port:</label>
     <input type="number" id="port" min="1" max="65535">
-    <button onclick="savePort()">Save Port</button>
+    <button onclick="savePort()">Save</button>
     <br>
     <span id="ip-address">Getting IP address</span>
   </div>
