--- a/Backend/index.html
+++ b/Backend/index.html
@@ -32,7 +32,7 @@
           if (ip === false) {
             ipAddressElement.innerHTML = `No internet connection. Closing in 5 seconds.`;
           } else {
-            ipAddressElement.innerHTML = `System IP: <b>${ip}</b> <br><br>Instructions:<br> 1. Download the mobile app <br> 2. Open it and click on "New IP" <br> 3. Introduce the IP shown above<br><br>To hide the app on startup, right-click the tray icon and uncheck 'Show on boot'.`;
+            ipAddressElement.innerHTML = `System IP: <b>${ip}</b> <br><br>Instructions:<br> 1. Download the mobile app <br> 2. Open it and click on "New IP" <br> 3. Introduce the IP shown above<br><br>To hide the app on startup, right-click the tray icon and uncheck 'Show on boot'.<br><br>Dont want the app to start on boot? just uncheck "Auto Start"`;
           }
 
         } catch (error) {
